--- a/org.eclipse.scout.rt.svg.ui.html/src/main/js/svg-module.less
+++ b/org.eclipse.scout.rt.svg.ui.html/src/main/js/svg-module.less
@@ -6,4 +6,4 @@
 * Released under the Eclipse Public License v1.0
 * http://www.eclipse.org/legal/epl-v10.html
 */
-@import "scout/svg/SvgField.less";
+@import "svg/SvgField";
